@@ -9,7 +9,7 @@
     <property name="project.version.full" value="${project.version.major}.${project.version.minor}${version-status}"/>
     <property name="project.jar" value="${project.shortname}-${project.version.full}.jar"/>
     <property name="project.zip" value="${project.shortname}-${project.version.full}.zip"/>
-    <property name="javadoc.zip" value="${project.shortname}-${project.version.full}-javadoc.zip"/>
+    <property name="javadoc.jar" value="${project.shortname}-${project.version.full}-javadoc.jar"/>
     <property name="sources.jar" value="${project.shortname}-${project.version.full}-sources.jar"/>
     <property name="maven-bundle.jar" value="${project.shortname}-${project.version.full}-bundle.jar"/>
     <property name="main.package.name" value="com.googlecode.instinct"/>
